# neorv32-sfp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cross.cmake
bootloader/: bootloader.c
demo/: blinky.c  main.c
image_gen/: CMakeLists.txt  image_gen.c
image_load/: CMakeLists.txt  image_load.cpp
inc/: FreeRTOSConfig.h  neo_app.h  neo_exec.h  neo_io.h  neo_parser.h  neo_uart.h  spi_flash.h  utils.h  utils_common.h
my_coremark/: core_portme.h  coremark_portme.c  coremark_printf.c
neorv32/sw/common/: common.mk
neorv32/sw/example/: makefile
scripts/: build.sh  build_debug.sh  build_release.sh
src/: main.c  neo_app.c  neo_exec.c  neo_io.c  neo_parser.c  neo_uart.c  spi_flash.c  utils.c  utils_common.c
test/: CMakeLists.txt  README.md  host_io.c  host_io.h  main.c  run_tests  test_common.h  test_exec.c  test_io.c  test_linebuf.c  test_parser.c
